--- a/Gather/app/src/main/res/values/strings.xml
+++ b/Gather/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
 <resources>
 
     <string name="app_name">Gather</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="new_event">Create Your First Event</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_feature_list">FeatureList</string>
+    <string name="dummy_button">Dummy Button</string>
 
 </resources>
