created ui, adapter, and basic model for music playlist from host perspective

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="title_activity_sign_in">Sign In</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
+    <string name="title_activity_host_music_playlist_home">HostMusicPlaylistHomeActivity</string>
 
 
 </resources>
