--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,14 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_sign_in">Sign In</string>
+    <string name="title_activity_main">Gather</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
+
+
+    <string name="title_section1">Gatherings</string>
+    <string name="title_section2">Exchanges</string>
+    <string name="title_section3">Profile</string>
 
 
 </resources>
