Working to fix SignUp Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="title_section2">Exchanges</string>
     <string name="title_section3">Profile</string>
 
+    <string name="save_changes">SAVE CHANGES</string>
+
 
 </resources>
