--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="title_activity_main">Gather</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
+    <string name="title_activity_post_sign_in">Main menu</string>
+    <string name="edit_account">Edit account info</string>
+    <string name="goto_event_viewer">View Events</string>
 
 
     <string name="title_section1">Gatherings</string>
@@ -22,5 +25,49 @@
 
     <string name="save_changes">SAVE CHANGES</string>
 
+    <string name="prompt_username">Username (Email Address)</string>
+    <string name="prompt_first_name"> First Name</string>
+    <string name="prompt_last_name">Last Name</string>
+    <string name="prompt_phone_number">Phone Number (optional)</string>
+    <string name="prompt_verify">Verify Password</string>
+    <string name ="go_back">Go Back</string>
+    <string name="title_activity_new_features_list">new_features_list</string>
+
+    <string name="publishing_activity_title">Publish Event</string>
+    <string name="event_image_desc">Event picture</string>
+    <string name="social_media_label">Share Your Event</string>
+    <string name="social_media_info">Tell your friends about your event!</string>
+    <string name="social_media_text_hint">Hey, guys! Check out my event! #GETkRuNk</string>
+    <string name="facebook">Facebook</string>
+    <string name="facebook_user_name">user_name</string>
+    <string name="facebook_image_desc">Facebook icon</string>
+    <string name="twitter">Twitter</string>
+    <string name="twitter_user_name">\@user_name</string>
+    <string name="twitter_image_desc">Twitter icon</string>
+    <string name="instagram">Instagram</string>
+    <string name="instagram_user_name">user_name</string>
+    <string name="instagram_image_desc">Instagram icon</string>
+    <string name="google_plus">Google+</string>
+    <string name="google_plus_user_name">user_name</string>
+    <string name="google_plus_image_desc">Google+ icon</string>
+    <string name="phrase">Now it\'s time to…</string>
+    <string name="feature_list_title">Feature List</string>
+    <string name="pick_venue_title">Pick a Venue</string>
+    <string name="or">or</string>
+
+    <string name="name_event">Name Event</string>
+    <string name="pick_venue">Pick a venue</string>
+    <string name="send_invites">Send invites</string>
+    <string name="create_playlist">Create a playlist</string>
+    <string name="send_message">Track Progress</string>
+    <string name="post_photos">Social Media</string>
+    <string name="get_started">Let\'s get started...</string>
+    <string name="title_activity_name_event">name_event</string>
+
+    <string name="enter_name">Enter a name</string>
+    <string name="creator_name">Creator\'s name</string>
+    <string name="name_preview">Event Name Preview</string>
+    <string name="submit_name">Submit Name</string>
+    <string name="preview">preview</string>
 
 </resources>
