--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,6 @@
     <string name="name_preview">Event Name Preview</string>
     <string name="submit_name">Submit Name</string>
     <string name="preview">preview</string>
+    <string name="title_activity_messaging">MessagingActivity</string>
 
 </resources>
