Event List integrated, needs to be linked to features list actvity. User profiles implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,7 @@
     <string name="submit_name">Submit Name</string>
     <string name="preview">preview</string>
 
+    <!-- Event Fragment Strings -->
+    <string name="new_event">CREATE NEW EVENT</string>
+
 </resources>
