--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,5 +73,6 @@
 
     <!-- Event Fragment Strings -->
     <string name="new_event">CREATE NEW EVENT</string>
+    <string name="title_activity_send_invites">SendInvitesActivity</string>
 
 </resources>
